bug: navbar search label was displayed as none, so screen readers would ignore the label. hiding styling changed to be visible to screen readers.

--- a/ckanext/ontario_theme/fanstatic/ontario_theme.less
+++ b/ckanext/ontario_theme/fanstatic/ontario_theme.less
@@ -753,28 +753,35 @@ footer.site-footer {
    Accessibility-specific styles
    ===================================================== */
 
+.accessibly-hidden {
+  left:-999px;
+  position:absolute;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  z-index:-999;  
+  display: inline;
+}
 a.skip-main {
-    left:-999px;
-    position:absolute;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-    z-index:-999;
+  &:extend(.accessibly-hidden);
 }
 a.skip-main:focus, a.skip-main:active {
-    color: #fff;
-    background-color:#000;
-    left: auto;
-    top: auto;
-    width: 30%;
-    height: auto;
-    overflow:auto;
-    margin: 10px 35%;
-    padding:5px;
-    border-radius: 15px;
-    border:4px solid #fff;
-    text-align:center;
-    font-size:1.2em;
-    z-index:999;
+  color: #fff;
+  background-color:#000;
+  left: auto;
+  top: auto;
+  width: 30%;
+  height: auto;
+  overflow:auto;
+  margin: 10px 35%;
+  padding:5px;
+  border-radius: 15px;
+  border:4px solid #fff;
+  text-align:center;
+  font-size:1.2em;
+  z-index:999;
+}
+.simple-input label, .simple-input button {
+  &:extend(.accessibly-hidden);
 }
